--- a/src/site/_includes/components/user/notes/footer/001-comment.njk
+++ b/src/site/_includes/components/user/notes/footer/001-comment.njk
@@ -1,3 +1,4 @@
+<div class="giscus content"></div>
 <script src="https://giscus.app/client.js"
         data-repo="Heiss/digital-garden"
         data-repo-id="R_kgDOLt8Qzg"
@@ -13,4 +14,4 @@
         crossorigin="anonymous"
         async>
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<noscript>Please enable JavaScript to view the comments powered by Gisqus.</a></noscript>
