Revert migration to cusdis

--- a/src/site/_includes/components/user/notes/footer/001-comment.njk
+++ b/src/site/_includes/components/user/notes/footer/001-comment.njk
@@ -1,9 +1,17 @@
-<div id="cusdis_thread"
-  data-host="https://cusdis.com"
-  data-app-id="1e038bcd-ceaa-49ff-8d77-6f8c06ad9c63"
-  data-page-id="{{ page.fileSlug }}"
-  data-page-url="{{ page.url }}"
-  data-page-title="{% if title %}{{ title }}{% else %}{{ page.fileSlug }}{% endif %}"
-></div>
-<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+<div class="giscus content"></div>
+<script src="https://giscus.app/client.js"
+        data-repo="Heiss/digital-garden"
+        data-repo-id="R_kgDOLt8Qzg"
+        data-category="General"
+        data-category-id="DIC_kwDOLt8Qzs4CercF"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="de"
+        crossorigin="anonymous"
+        async>
+</script>
 <noscript>Please enable JavaScript to view the comments powered by Gisqus.</a></noscript>
